...
            android:layout_marginTop="120dp"
            android:background="@color/Transparent"
            android:text="Forgot Password?"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/createAcct"
            android:layout_width="350dp"
            android:layout_height="31dp"

            android:background="@color/Transparent"
            android:text="Create an Account"
            android:textColor="#FFFFFF" />
...
