<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <TextView
        android:id="@+id/winnerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:padding="20dp"
        android:text="Player X wins!"
        android:layout_marginBottom="20dp" />
    <TextView
        android:id="@+id/timeRemainingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winnerText"
        android:text=""
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <GridLayout
        android:id="@+id/winnerGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeRemainingText"


        android:padding="1dp"


        >

        <!-- Row labels -->
        <TextView android:text="" android:gravity="center" android:id="@+id/Col1" android:layout_column="1" android:layout_row="0" android:layout_width="80dp" android:layout_height="80dp"/>
        <TextView android:text="" android:gravity="center" android:id="@+id/Col2" android:layout_column="2" android:layout_row="0" android:layout_width="80dp" android:layout_height="80dp"/>
        <TextView android:text="" android:gravity="center" android:id="@+id/Col3" android:layout_column="3" android:layout_row="0" android:layout_width="80dp" android:layout_height="80dp"/>

        <!-- Column labels -->
        <TextView android:text="" android:id="@+id/Row1" android:gravity="center" android:layout_gravity="top" android:layout_column="0" android:layout_row="1" android:layout_width="80dp" android:layout_height="80dp"/>

        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R1C1" android:id="@+id/r1c1" android:background="@drawable/border_cell_topleft" />
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R1C2" android:id="@+id/r1c2" android:background="@drawable/border_cell_middle_topbottom"/>
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R1C3" android:id="@+id/r1c3" android:background="@drawable/border_cell_topright"/>

        <TextView android:text="" android:id="@+id/Row2" android:gravity="center" android:layout_gravity="top" android:layout_column="0" android:layout_row="2" android:layout_width="80dp" android:layout_height="80dp"/>
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R2C1" android:id="@+id/r2c1" android:background="@drawable/border_cell_middle_leftright"/>
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R2C2" android:id="@+id/r2c2" android:background="@color/white" />
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R2C3" android:id="@+id/r2c3" android:background="@drawable/border_cell_middle_leftright"/>

        <TextView android:text="" android:id="@+id/Row3" android:gravity="center" android:layout_gravity="top" android:layout_column="0" android:layout_row="3" android:layout_width="80dp" android:layout_height="80dp"/>
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R3C1" android:id="@+id/r3c1" android:background="@drawable/border_cell_bottomleft"/>
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R3C2" android:id="@+id/r3c2" android:background="@drawable/border_cell_middle_topbottom"/>
        <TextView android:layout_width="80dp" android:layout_height="80dp" android:gravity="center" android:text="R3C3" android:id="@+id/r3c3" android:background="@drawable/border_cell_bottomright"/>

    </GridLayout>

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Restart"
        android:layout_below="@+id/winnerGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
