...

    </androidx.gridlayout.widget.GridLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="End Game"
        android:id="@+id/endGameButton"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>


...
